[tool.poetry]
name = "pymongo-write-cache"
version = "0.0.2"
description = "Simple to use write cache for pymongo."
authors = ["Iwan Silvan Bolzern <iwan.bolzern@bluewin.ch>"]
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/iwanbolzern/mongodb-write-cache"
repository = "https://github.com/iwanbolzern/mongodb-write-cache"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "pymongo_write_cache" },
]


[tool.poetry.dependencies]
python = "^3.6"
pymongo = "^3.11.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
